--- a/HUGO/layouts/_default/single.html
+++ b/HUGO/layouts/_default/single.html
@@ -15,6 +15,18 @@
 
 </article>
 
+<div class="article-container">
+
+   {{ if and (or .IsPage .IsSection) .Site.Params.editURL }}
+                  {{ $File := .File }}
+                  {{ $Site := .Site }}
+                  {{with $File.Path }}
+                  <a class="github-link" href="{{ $Site.Params.editURL }}{{ replace $File.Dir "\\" "/" }}{{ $File.LogicalName }}" target="blank"><i class="fa fa-code-fork"></i>{{ $Site.Params.editURLtext }}</a>
+                  {{ end }}
+                {{ end }}
+
+</div>
+
 <div class="container">
   {{ partial "section_pager.html" . }}
 </div>
