added a contribution walkthrough

--- a/HUGO/layouts/partials/navbar.html
+++ b/HUGO/layouts/partials/navbar.html
@@ -67,6 +67,7 @@
           </ul>
         </li>
         {{ end }}
+        <!-- <li>{{ partial "search.html" . }}</li> -->
       </ul>
 
     </div><!-- /.navbar-collapse -->
